WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313304
REGRESSION (
311908@main
): Autoplay button in YouTube controls is misplaced
https://bugs.webkit.org/show_bug.cgi?id=313304
Summary
REGRESSION (311908@main): Autoplay button in YouTube controls is misplaced
alan
Reported
2026-04-25 06:15:31 PDT
<
rdar://175562243
>
Attachments
[fast-cq]Patch
(10.33 KB, patch)
2026-04-25 06:54 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-25 06:54:05 PDT
Created
attachment 479299
[details]
[fast-cq]Patch
EWS
Comment 2
2026-04-25 12:09:19 PDT
Committed
312020@main
(d4ee79d749dd): <
https://commits.webkit.org/312020@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479299
[details]
.
Sammy Gill
Comment 3
2026-04-29 10:02:55 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/59549
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug